# RayTracer

./: .clang-format  .gitignore  README.md  run_all.sh
input/: cylinder.txt  paimon.txt  prism.txt  rectangle.txt  slime.txt  spheres.txt  wallpaper.txt
meshes/paimon/: paimon.mtl
src/: Bezier.h  CMakeLists.txt  Camera.h  Canvas.h  Color.h  Cylinder.h  Mesh.h  Object.h  Plane.h  Prism.h  Rectangle.h  Scene.h  Sphere.h  Triangle.h  Vectors.h  config.h  main  main.cpp
tools/Bezier_painter/: Bezier_painter  Bezier_painter.cpp  CMakeLists.txt  run_bezier_painter.sh
tools/color_tools/: CMakeLists.txt  run_spectrum.sh  spectrum.cpp
tools/filter/: CMakeLists.txt  filter.cpp  run_filter.sh
